# glfw-rust-app

./: .gitignore  Cargo.toml  LICENSE
glcall_macro/: Cargo.toml
glcall_macro/src/: lib.rs
src/: gl_component.rs  gl_error.rs  index_buffer.rs  lib.rs  main.rs  renderer.rs  shader.rs  texture.rs  vertex_array.rs  vertex_buffer.rs  vertex_buffer_layout.rs
src/res/: Default.glsl
src/res/fonts/: FIRACODE_LICENSE
src/res/shaders/: Batching.glsl  Default.glsl  Text.glsl
src/tests/: menu.rs  mod.rs  test_3d.rs  test_batch_rendering.rs  test_clear_color.rs  test_text_rendering.rs  test_texture.rs
